--- a/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
+++ b/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
@@ -171,7 +171,6 @@ Having observed that subsequent inter-repetition intervals are increasing by an 
 > - I(n) - 重复 n 次后的重复间隔(以天为单位)
 > - EF - 简易因子反映了记忆和记忆一个给定的项目的轻松程度(后来称为[简易度](https://supermemo.guru/wiki/E-Factor))。
 >
-> 
 
 E-Factors were allowed to vary between 1.1 for the most difficult items and 2.5 for the easiest ones. At the moment of introducing an item into a SuperMemo database, its E-Factor was assumed to equal 2.5. In the course of repetitions, this value was gradually decreased in case of recall problems. Thus the greater problems an item caused in recall the more significant was the decrease of its E-Factor.
 
@@ -248,6 +247,6 @@ During the first year of using the SM-2 algorithm (learning English vocabulary),
 
 在使用 SM-2 算法(学习英语词汇)的第一年，我记住了 10255 个单词。创建数据库和重复所需要的时间为每天 41 分钟。这相当于 270 个项目/年/分钟的学习率。整体保留率为 89.3%，但剔除近期记忆(间隔在 3 周以下)没有正确确定简易度后，保留率为 92%。比较 SM-0 和 SM-2 算法，我们必须考虑这样一个事实：在前一种情况下，由于学生在重复给定页面的项目时得到了提示，所以保留率被人为地提高了。问题前面的项目可以很容易地给出正确答案。
 
-Therefore the Algorithm SM-2, though not stunning in terms of quantitative comparisons, marked the second major improvement of the 
+Therefore the Algorithm SM-2, though not stunning in terms of quantitative comparisons, marked the second major improvement of the SuperMemo method after the introduction of the concept of optimal intervals back in 1985. Separating items previously grouped in pages and introducing E-Factors were the two major components of the improved algorithm. Constructed by means of the trial-and-error approach, the SM-2 algorithm proved in practice the correctness of nearly all basic assumptions that led to its conception
 
-因此，算法 SM-2 虽然在定量比较方面并不令人惊叹，但它标志着该算法的第二个重大改进
+因此，算法 SM-2 虽然在定量比较方面并不令人惊叹，但它标志着 SuperMemo 方法在 1985 年引入最佳区间概念后的第二次重大改进。将先前分组在页面中的项目分离和引入简易度是改进算法的两个主要组成部分。SM-2 算法是通过试错法构建的，它在实践中证明了导向其概念的几乎所有基本假设的正确性
