--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -8,7 +8,7 @@ October 2019
 
 Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence[^1]. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”[^2].
 
-谈起关于计算机起源的那些神话，常会提到被称为「黄金年代」的上世纪 60 年代与 70 年代。在那段时间里，许多高瞻远瞩的开拓者都在追逐同一个梦想，即让计算机承载强大的思想工具，也就是能增强人类智力的工具[^1]。这些开拓者中的一位，Alan Key, 在阐述个人电脑的潜力时，总结了他们对这个梦想的乐观愿景：「它（计算机）的使用将会改变整个文明的思想模式」[^2]。
+谈起关于计算机起源的那些神话，常会提到被称为「黄金年代」的上世纪 60 年代与 70 年代。在那段时间里，许多高瞻远瞩的开拓者都在追逐同一个梦想，即让计算机承载强大的思想工具，也就是能增强人类智力的工具[^1]。这些开拓者中的一位，Alan Key，在阐述个人电脑的潜力时，总结了他们对这个梦想的乐观愿景：「它（计算机）的使用将会改变整个文明的思想模式」[^2]。
 
 It’s an inspiring dream, which helped lead to modern interactive graphics, windowing interfaces, word processors, and much else. But retrospectively it’s difficult not to be disappointed, to feel that computers have not yet been nearly as transformative as far older tools for thought, such as language and writing. Today, it’s common in technology circles to pay lip service to the pioneering dreams of the past. But nostalgia aside there is little determined effort to pursue the vision of transformative new tools for thought.
 
@@ -20,11 +20,11 @@ We believe now is a good time to work hard on this vision again. In this essay w
 
 In the opening we mentioned some visionaries of the past. To those could be added many others – Ivan Sutherland, Seymour Papert, Vannevar Bush, and more. Online there is much well-deserved veneration for these people. But such veneration can veer into an unhealthy reverence for the good old days, a belief that giants once roamed the earth, and today’s work is lesser. Yes, those pioneers did amazing things, and arguably had ways of working that modern technologists, in both industry and academia, are poorly equipped to carry on. But they also made mistakes, and were ignorant of powerful ideas that are available today. And so a theme through both parts of the essay is to identify powerful ideas that weren’t formerly known or weren’t acted upon. Out of this understanding arises a conviction that a remarkable set of opportunities is open today.
 
-在文章的开头我们提到了一些开拓者的名字，实际上这样的开拓者还有很多，如 Ivan Sutherland, Seymour Papert, Vannevar Bush 等等。在网络上对这些先贤都有着很高的评价。当然，他们都配得上这些评价，但是这种崇敬可能会演变成对往昔的过度尊崇，进而认为昨日巨擘满堂，现在今人了了。是，这些大师确实取得了惊艳的成果，甚至可以说他们的工作模式是现代的学者或技术专家都没有能力继承的。但是他们也会犯错，并且不知道那些现代的有用想法。因此，贯穿文章两个部分的一大主题是找出更多有用想法，他们可能不为人知或停留在纸面上的。从这个主题也衍生出一个信念，也就是现在还是有许多非凡的想法等待挖掘。
+在文章的开头我们提到了一些开拓者的名字，实际上这样的开拓者还有很多，如 Ivan Sutherland、Seymour Papert、Vannevar Bush 等等。在网络上对这些先贤都有着很高的评价。当然，他们都配得上这些评价，但是这种崇敬可能会演变成对往昔的过度尊崇，进而认为昨日巨擘满堂，现在今人了了。是，这些大师确实取得了惊艳的成果，甚至可以说他们的工作模式是现代的学者或技术专家都没有能力继承的。但是他们也会犯错，并且不知道那些现代的有用想法。因此，贯穿文章两个部分的一大主题是找出更多有用想法，他们可能不为人知或停留在纸面上的。从这个主题也衍生出一个信念，也就是现在还是有许多非凡的想法等待挖掘。
 
-A word on nomenclature: the term “tools for thought” rolls off neither the tongue nor the keyboard. What’s more, the term “tool” implies a certain narrowness. Alan Kay has arguedAgain, in Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989), among other places. that a more powerful aim is to develop a new *medium for thought*. A medium such as, say, Adobe *Illustrator* is essentially different from any of the individual tools *Illustrator* contains. Such a medium creates a powerful immersive context, a context in which the user can have new kinds of thought, thoughts that were formerly impossible for them. Speaking loosely, the range of expressive thoughts possible in such a medium is an emergent property of the elementary objects and actions in that medium. If those are well chosen, the medium expands the possible range of human thought.
+A word on nomenclature: the term “tools for thought” rolls off neither the tongue nor the keyboard. What’s more, the term “tool” implies a certain narrowness. Alan Kay has argued[^3] that a more powerful aim is to develop a new *medium for thought*. A medium such as, say, Adobe *Illustrator* is essentially different from any of the individual tools *Illustrator* contains. Such a medium creates a powerful immersive context, a context in which the user can have new kinds of thought, thoughts that were formerly impossible for them. Speaking loosely, the range of expressive thoughts possible in such a medium is an emergent property of the elementary objects and actions in that medium. If those are well chosen, the medium expands the possible range of human thought.
 
-解释一下「思想工具」这个名字。「工具」这个词是经过审慎选择的。在这里， 「工具」有一定的特指。Alan Kay 曾经说过[^3]，（相比于开发思想工具）一个更有力的目标是开发一个新的思想媒介。比如说，Adobe Illustrator 这样的媒介，在本质上不同于其所包含的任何单个工具。这样的媒介创造了一个强大的沉浸式环境，在这个环境中，用户可以迸发出新的思想，离开此地则断不能有。笼统地说，基本部件和动作组合起来构成的媒介，在思想表达上有整体大于部分之和的效果。[^Mass Point 1][^Shom 1](emergent 在此处应当指 emergence, 即简单的部分相加，整体表现出部分所没有的性质，如蚁群表现出单独蚂蚁所没有的智慧)如果这些东西选择得好，思想媒介就会扩大人类思想的疆界。
+解释一下「思想工具」这个名字：「工具」这个词是经过审慎选择的。在这里， 「工具」有一定的特指。Alan Kay 曾经说过[^3]，（相比于开发思想工具）一个更有力的目标是开发一个新的思想媒介。比如说，Adobe Illustrator 这样的媒介，在本质上不同于其所包含的任何单个工具。这样的媒介创造了一个强大的沉浸式环境，在这个环境中，用户可以迸发出新的思想，离开此地则断不能有。笼统地说，基本部件和动作组合起来构成的媒介，在思想表达上有整体大于部分之和的效果。[^Mass Point 1][^Shom 1]如果这些东西选择得好，思想媒介就会扩大人类思想的疆界。
 
 With that said, the term “tools for thought” has been widely used since Iverson’s 1950s and 1960s work[^4] introducing the term. And so we shall use “tools for thought” as our catch all phrase, while giving ourselves license to explore a broader range, and also occasionally preferring the term “medium” when it is apt.
 
@@ -36,7 +36,7 @@ Let’s come back to that phrase from the opening, about changing “the thought
 
 The musician and comedian Martin Mull has observed that “writing about music is like dancing about architecture”. In a similar way, there’s an inherent inadequacy in writing about tools for thought. To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
 
-音乐家兼喜剧演员 Martin Mull 说过，「用文字描述音乐就像用舞蹈描述建筑」。同样地，对于描述思想工具，书写也存在先天不足。因为全新思想工具的成功，全然在于其开拓人的思想疆界的能力，大大超越现存工具，就比如超越写作。@f 新工具的变革性越强，与旧有工具开拓思想能力差距也越大。而其反作用就是，差距越大，这种新工具就越难用书写表达清楚。但是文字能够引导读者，这也是我们写这篇文章的原因。写作是确定杠杆点的一种方式，可能会有助于新思想工具的开发。所以让我们继续吧。[^Mass Point 2]
+音乐家兼喜剧演员 Martin Mull 说过，「用文字描述音乐就像用舞蹈描述建筑」。同样地，对于描述思想工具，书写也存在先天不足。因为全新思想工具的成功，全然在于其开拓人的思想疆界的能力，大大超越现存工具，就比如超越写作。新工具的变革性越强，与旧有工具开拓思想能力差距也越大。而其反作用就是，差距越大，这种新工具就越难用书写表达清楚。但是文字能够引导读者，这也是我们写这篇文章的原因。写作是确定杠杆点的一种方式，可能会有助于新思想工具的开发。所以让我们继续吧。[^Mass Point 2]
 
 # Part I: Memory systems
 
@@ -48,11 +48,11 @@ The musician and comedian Martin Mull has observed that “writing about music i
 
 Few subjects are more widely regarded as difficult than quantum computing and quantum mechanics. Indeed, popular media accounts often regale (and intimidate) readers with quotes from famous physicists in the vein of: “anyone who thinks they’ve understood quantum mechanics has not understood quantum mechanics”.
 
-量子力学和量子计算是常人眼中最艰涩难懂的学科。主流媒体经常由此来逗笑（或者恐吓）读者，引用一些著名物理学家的名言，比如「任何认为自己已经理解了量子力学的人都没有理解量子力学」
+量子力学和量子计算是常人眼中最艰涩难懂的学科。主流媒体经常由此来逗笑（或者恐吓）读者，引用一些著名物理学家的名言，比如「任何认为自己已经理解了量子力学的人都没有理解量子力学」。
 
 What makes these subjects difficult? In fact, individually many of the underlying ideas are not too complicated for people with a technical background. But the ideas come in an overwhelming number, a tsunami of unfamiliar concepts and notation. People must learn in rapid succession of qubits, the bra-ket notation, Hadamard gates, controlled-not gates, and many, many other abstract, unfamiliar notions. They’re imbibing an entire new language. Even if they can follow at first, understanding later ideas requires fluency with all the earlier ideas. It’s overwhelming and eventually disheartening.
 
-什么因素让这些科目变得如此困难? 其实对于有学科背景的人来说，许多背后的思路单拎出来都不是很复杂。但是这些想法往往是以压倒性的数量同时出现的，随之而来的还有狂风骤雨般陌生的概念和符号。人们必须飞快地接二连三学习量子比特、Bra-ket 符号、Hadamard 门、受控否闸以及更多抽象而陌生的符号。他们正在吸收一种全新的语言。即使他们一开始能跟上，但他们无法熟练掌握全部这些想法，因而不能理解后续的想法。这让人不知所措，最终感到沮丧。[^Mass Point 3]
+什么因素让这些科目变得如此困难？其实对于有学科背景的人来说，许多背后的思路单拎出来都不是很复杂。但是这些想法往往是以压倒性的数量同时出现的，随之而来的还有狂风骤雨般陌生的概念和符号。人们必须飞快地接二连三学习量子比特、Bra-ket 符号、Hadamard 门、受控否闸以及更多抽象而陌生的符号。他们正在吸收一种全新的语言。即使他们一开始能跟上，但他们无法熟练掌握全部这些想法，因而不能理解后续的想法。这让人不知所措，最终感到沮丧。[^Mass Point 3]
 
 As an experiment, we have developed a website, [*Quantum Country*](https://quantum.country/), which explores a new approach to explaining quantum computing and quantum mechanics. Ostensibly, *Quantum Country* appears to be a conventional essay introduction to these subjects. There is text, explanations, and equations, much as in any other technical essay. Here’s an excerpt:
 
@@ -74,7 +74,7 @@ In fact, there are many ways of redesigning the essay medium to do that. Before 
 
 Let’s sketch the user experience of *Quantum Country*. At the time of this writing the site contains three mnemonic essays (i.e., particular instances of the mnemonic medium). We’ll focus on the introductory essay, [“Quantum Computing for the Very Curious”](https://quantum.country/qcvc). Embedded within the text of the essay are 112 questions about that text. Users are asked to create an account, and quizzed as they read on whether they remember the answers to those questions. Here’s what the interaction looks like, as a user answers three questions.
 
-让我们简要概括一下量子国度的用户体验。在写这篇文章的时候，该网站包含三篇助记文章（即助记媒介的一个特定实体）。我们将重点关注第一篇，["写给好奇者的量子计算引论"](https://quantum.country/qcvc).在这篇文章中我们嵌入了112个关于文本的问题。用户被要求注册一个账号，并在阅读过程中回答他们是否记得这些问题的答案。下面是一个用户回答其中三个问题时的互动情况。[^Mass Point 5]
+让我们简要概括一下量子国度的用户体验。在写这篇文章的时候，该网站包含三篇助记文章（即助记媒介的一个特定实体）。我们将重点关注第一篇，[《写给好奇者的量子计算引论》](https://quantum.country/qcvc)。在这篇文章中我们嵌入了 112 个关于文本的问题。用户被要求注册一个账号，并在阅读过程中回答他们是否记得这些问题的答案。下面是一个用户回答其中三个问题时的互动情况。[^Mass Point 5]
 
 https://numinous.productions/ttft/assets/qc_interaction.mp4
 
@@ -82,7 +82,7 @@ https://www.zhihu.com/zvideo/1377723672250126336
 
 Note that this interaction occurs within the text of the essay itself. Here’s a zoomed-out view, so you can see how such questions are surrounded by essay text both above and below:
 
-值得注意的是这种互动发生在文章本身的文本中。下面是一个放大视图，你可以看到这些问题是如何被文本上下包围的。
+值得注意的是这种互动发生在文章本身的文本中。下面是一个放大视图，你可以看到这些问题是如何被文本上下包围的：
 
 ![Screenshot depicting the interactive quiz interleaved in a few paragraphs of prose.](https://numinous.productions/ttft/assets/qc_zoom_out-2x.png)
 
@@ -108,7 +108,7 @@ The highlighted time interval is the duration until the user is tested again on 
 
 This takes advantage of a fundamental fact about human memory: as we are repeatedly tested on a question, our memory of the answer gets stronger, and we are likely to retain it for longer[^6]. This exponential rise perhaps seems innocuous, but it’s transformative. It means that a relatively small number of reviews will enable a user to remember for years. With the time taken to review a typical question being just a few seconds, that means a user can achieve long-term recall with no more than a few minutes’ work. By contrast, with conventional flashcards it takes hours of review to achieve the same durability. Exponential scheduling is far more efficient.
 
-这套方法利用了一个人类记忆的基本事实：用同一个问题反复测试后，对答案的记忆会越来越牢固[^6], 而且可能会留存更长时间。这种指数式间隔安排方式看上去没什么了不起，但这却是革命性的，这意味着只需相对较少的复习次数就能让用户记住这些内容好几年。由于一个问题一般只需要几秒钟复习，这意味着用户只需花几分钟的时间就能实现长期记忆。相比之下，传统的抽认卡则需要几个小时的复习才能达到同样的持久性，指数式间隔安排的效率显然要高得多。
+这套方法利用了一个人类记忆的基本事实：用同一个问题反复测试后，对答案的记忆会越来越牢固[^6]，而且可能会留存更长时间。这种指数式间隔安排方式看上去没什么了不起，但这却是革命性的，这意味着只需相对较少的复习次数就能让用户记住这些内容好几年。由于一个问题一般只需要几秒钟复习，这意味着用户只需花几分钟的时间就能实现长期记忆。相比之下，传统的抽认卡则需要几个小时的复习才能达到同样的持久性，指数式间隔安排的效率显然要高得多。
 
 ## The early impact of the prototype mnemonic medium
 
@@ -126,11 +126,11 @@ The graph takes a little unpacking to explain. By a card’s “demonstrated ret
 
 So, for instance, after 6 repetitions, we see from the graph that most users are up around 6,000 days of demonstrated retention. That means an average of about 6,000 / 112 ~ 54 days per question in the essay. Intuitively, that seems pretty good – if you’re anything like us, a couple of months after reading something you have only a hazy memory. By contrast, these users have, at low time cost to themselves (of which more below), achieved nearly two months of demonstrated retention across 112 detailed questions.
 
-因此，举例来说，经过 6 次复习，大多数用户的总实证留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了 54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已实证留存。
+因此，举例来说，经过 6 次复习，大多数用户的总实证留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了 54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的实证留存。
 
 Furthermore, you can see the exponential rise in retention with the number of times cards have been reviewed. After the first review, users typically have an average of just over 2 days of demonstrated retention, per card[^7]. But by the sixth review that rises to an average of 54 days of demonstrated retention. That typically takes about 95 minutes of total review time to achieve. Given that the essay takes about 4 or so hours to read, this suggests that a less than 50% overhead in time commitment can provide many months or years of retention for almost all the important details in the essay.
 
-此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证留存天数。[^7]但复习了 6 次之后，这个数字就上升到了 54 天。把所有卡片复习六次大约共需要 85 分钟，考虑到阅读这篇文章需要4个小时左右的时间，这就表明只需不到 50% 的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
+此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证留存天数。[^7]但复习了 6 次之后，这个数字就上升到了 54 天。把所有卡片复习六次大约共需要 85 分钟，考虑到阅读这篇文章需要 4 个小时左右的时间，这就表明只需不到 50% 的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
 
 This is the big, counterintuitive advantage of spaced repetition: you get exponential returns for increased effort. On average, every extra minute of effort spent in review provides more and more benefit. This is in sharp contrast with most experiences in life, where we run into diminishing returns. For instance, ordinarily if you increase the amount of time you spend reading by 50%, you expect to get no more than 50% extra out of it, and possibly much less. But with the mnemonic medium when you increase the amount of time you spend reading by 50%, you may get 10x as much out of it. Of course, we don’t quite mean those numbers literally. But it does convey the key idea of getting a strongly non-linear return. It’s a change in the quality of the medium.
 
@@ -138,7 +138,7 @@ This is the big, counterintuitive advantage of spaced repetition: you get expone
 
 This delayed benefit makes the mnemonic medium unusual in multiple ways. Another is this: most online media use short-term engagement models, using variations on operant conditioning to drive user behavior. This is done by Twitter, Facebook, Instagram, and many other popular media forms. The mnemonic medium is much more like meditation – in some ways, the anti-product, since it violates so much conventional Silicon Valley wisdom – in that the benefits are delayed, and hard to have any immediate sense of. Indeed, with the mnemonic medium, the greater the delay, the more the benefit.
 
-这种延迟回报让助记媒介在多个方面都不寻常。另一个不寻常的地方是，大多数社交软件使用短期交互的模式（short-term engagement models)，用一种类似条件反射的策略来驱使用户。Twitter、Facebook、Instagram 和许多其他流行的社交软件都是这样做的。而助记媒介在某些方面更像冥想，是前面提到的那些产品的反面，因为助记媒介违反了许多硅谷的传统智慧——在这里好处是延迟的，而且很难有任何即时的获得感。事实上，对于助记媒介而言，延迟越大，受益越多。
+这种延迟回报让助记媒介在多个方面都不寻常。另一个不寻常的地方是，大多数社交软件使用短期交互的模式（short-term engagement models），用一种类似条件反射的策略来驱使用户。Twitter、Facebook、Instagram 和许多其他流行的社交软件都是这样做的。而助记媒介在某些方面更像冥想，是前面提到的那些产品的反面，因为助记媒介违反了许多硅谷的传统智慧——在这里好处是延迟的，而且很难有任何即时的获得感。事实上，对于助记媒介而言，延迟越大，受益越多。
 
 These are preliminary results, and need more investigation. One naturally wonders what would happen if we’d been much more aggressive with the review schedule, setting the initial interval between reviews to (say) 2 months? If users reliably retained information up to that point, then the graph would start very high, and we wouldn’t see the exponential. We need to investigate these and many similar questions to better understand what’s going on with user’s memories.
 
@@ -146,11 +146,11 @@ These are preliminary results, and need more investigation. One naturally wonder
 
 Early feedback from users makes us cautiously optimistic that they’re finding the mnemonic medium useful. In May 2019, one of us posted to Twitter a short thread explaining the technical details of how quantum teleportation works. One user of *Quantum Country* [replied to the thread](https://twitter.com/KeithMansfield/status/1132031824513966080) with:
 
-用户的早期反馈使我们谨慎乐观地认为助记媒介对他们很有用。2019 年 5 月，我们中的一个人在 Twitter 上发布了一则推文，解释了量子传送的技术细节。一位量子国度的用户[回复了该推文](https://twitter.com/KeithMansfield/status/1132031824513966080), 称：
+用户的早期反馈使我们谨慎乐观地认为助记媒介对他们很有用。2019 年 5 月，我们中的一个人在 Twitter 上发布了一则推文，解释了量子传送的技术细节。一位量子国度的用户[回复了该推文](https://twitter.com/KeithMansfield/status/1132031824513966080)，称：
 
 > I’ve only done your first quantum country course (so far) but I find it remarkable that I can view the proof and follow it, knowing what everything means. It’s almost like Neo in The Matrix telling Morpheus, ‘I know quantum computing’[^8].
 >
-> 到目前我只学完了量子国度上的第一个课程，但我惊奇的发现读着其中的证明，我跟得住，能知道其中每个部分的含义。这几乎就像黑客帝国里的 Neo 对 Morpheus 说「I know quantum computing」[^8].
+> 到目前我只学完了量子国度上的第一个课程，但我惊奇的发现读着其中的证明，我跟得住，能知道其中每个部分的含义。这几乎就像黑客帝国里的 Neo 对 Morpheus 说「I know quantum computing」[^8]。
 
 A user with significantly more prior experience of quantum computing [wrote](https://news.ycombinator.com/item?id=19429035):
 
@@ -166,11 +166,11 @@ Another user, new to quantum computing, told us that *Quantum Country* “is by 
 
 > Wow, I actually followed that for 40 or 45 minutes because the matrices looked familiar… [the medium means] you run into concepts over and over again… It affords interactions at a more effective level of abstraction.
 >
-> 哇，我实际上能跟上他，大概 40 到 45 分钟左右，因为这些矩阵看上去都很熟悉。.....（这种媒介的特点决定了）你会一遍又一遍地遇到这些概念......这种媒介提供了一种抽象层面上的高效互动。
+> 哇，我实际上能跟上他，大概 40 到 45 分钟左右，因为这些矩阵看上去都很熟悉…（这种媒介的特点决定了）你会一遍又一遍地遇到这些概念…这种媒介提供了一种抽象层面上的高效互动。
 
 Site analytics show a constant flow of people steadily working through the review sessions in the manner we intended. Six months after release of the prototype, 195 users had demonstrated one full month of retention on at least 80% of cards in the essay, demonstrating an extraordinary level of commitment to the process[^9]. We don’t yet have a good model of exactly what those people are learning, but it seems plausible they are taking away considerably more than from a conventional essay, or perhaps even from a conventional class.
 
-网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布 6 个月后，195 名用户对文章中至少 80% 的卡片都有整整一个月的实证留存天数，有力地证明了这一过程的有效性。[^9] 我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
+网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布 6 个月后，195 名用户对文章中至少 80% 的卡片都有整整一个月的实证留存天数，有力地证明了这一过程的有效性。[^9]我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
 
 Of course, this kind of feedback and these kinds of results should be taken with a grain of salt. The mnemonic medium is in its early days, has many deficiencies, and needs improvement in many ways (of which more soon). It is, however, encouraging to hear that some users already find the medium exceptionally helpful, and suggests developing and testing the medium further. At a minimum, it seems likely the mnemonic medium is genuinely helping people remember. And furthermore it has the exponentially increasing efficiency described above: the more people study, the more benefit they get per minute studied.
 
@@ -182,7 +182,7 @@ In another informal experiment, we tried to figure out how much it affected user
 
 What happened? Well, for those users whose reviews were delayed, accuracy dropped from 91% (upon the initial read) to 87% (after two weeks). This may seem a small drop, but keep in mind that users continued to review other cards, which almost certainly boosted their final performance, since those other cards had some overlap in content with the delayed cards. It’s difficult to avoid this kind of overlap without delaying reviews on all cards, a more drastic change in user experience than we wanted to impose. For users who were asked to review the cards as normal, accuracy improved from 89% to 96%. The short summary is: when users didn’t review the cards, accuracy dropped by 4%; when they did review the cards, accuracy increased by 7%[^10].
 
-发生了什么? 对于那些复习被推迟的用户来说，准确率从 91% （初次阅读时）下降到 87% （两周后）。似乎下降的不多，但别忘了，这些用户还在正常复习其他卡片。这些卡片的内容难免会与这8张卡片有所重叠，因此也可能提高他们的记忆表现。仅是推迟部分卡片的复习，这种效应是很难避免的，但全部推迟的话，对用户体验的影响就太大了。对于那些正常复习卡片的用户，准确率从 89% 提高到了 96%。总结一下就是：用户不复习卡片的话，准确率就会下降 4%；如果他们按时复习卡片的话，准确率会提高 7%。[^10]
+发生了什么？对于那些复习被推迟的用户来说，准确率从 91% （初次阅读时）下降到 87% （两周后）。似乎下降的不多，但别忘了，这些用户还在正常复习其他卡片。这些卡片的内容难免会与这8张卡片有所重叠，因此也可能提高他们的记忆表现。仅是推迟部分卡片的复习，这种效应是很难避免的，但全部推迟的话，对用户体验的影响就太大了。对于那些正常复习卡片的用户，准确率从 89% 提高到了 96%。总结一下就是：用户不复习卡片的话，准确率就会下降 4%；如果他们按时复习卡片的话，准确率会提高 7%。[^10]
 
 Another way of looking at the data from this informal experiment is to ask which users saw improved or unchanged performance, and which saw their performance get worse. In fact, every single user (100%) who reviewed cards on the regular schedule saw their performance either stay the same or improve. By contrast, 40% of the users whose reviews were delayed saw their performance get worse, while 60% saw it stay the same or improve.
 
@@ -210,15 +210,15 @@ Before we delve deeper into the mnemonic medium, let’s mention one challenge i
 
 In modern times, many memory systems have been developed. Among the better known are Anki, SuperMemo, Quizlet[^11], Duolingo, and Memrise. Like *Quantum Country*, each of these systems uses increasing time intervals between reviews of particular questions. Such systems are sometimes known as *spaced-repetition memory systems* (or *SRM* systems). They’re usually justified in a manner similar to our explanation for *Quantum Country*: some notion of each review gradually increasing the consolidation strength for a memory.
 
-回到现代，人们开发了很多记忆系统。比较著名的几个是 Anki, SuperMemo, Quizlet[^11], 多邻国和 Memrise. 和量子国度类似，这些系统都采用了对每个问题逐渐延长复习间隔的方法。这种系统有时也被称为**间隔重复记忆系统**（或SRM系统）. 这些系统的有效性的解释，和我们前面对「量子国度」的解释差不多：每次复习遇到的某些概念会巩固我们的记忆。
+回到现代，人们开发了很多记忆系统。比较著名的几个是 Anki、SuperMemo、Quizlet[^11]、多邻国和 Memrise。和量子国度类似，这些系统都采用了对每个问题逐渐延长复习间隔的方法。这种系统有时也被称为**间隔重复记忆系统**（或 SRM 系统）。这些系统的有效性的解释，和我们前面对「量子国度」的解释差不多：每次复习遇到的某些概念会巩固我们的记忆。
 
 SRM systems are most widely used in language learning. Duolingo, for instance, claims [25 million monthly active users](https://techcrunch.com/2018/08/01/duolingo-hires-its-first-chief-marketing-officer-as-active-user-numbers-stagnate/). Reports are mixed on success. Some serious users are [enthusiastic about their success](https://www.thrillist.com/travel/nation/duolingo-app-review-foreign-language) with Duolingo. But [others find it of limited utility](https://www.thecut.com/2019/01/does-duolingo-even-work.html). The company, of course, [touts research](https://support.duolingo.com/hc/en-us/articles/115000035183-Are-there-official-studies-about-Duolingo-) showing that it’s incredibly successful. It seems likely to us that Duolingo and similar systems are useful for many users as part of (but only part of) a serious language learning program.
 
-SRM系统在语言学习中的应用最为广泛。比如多邻国宣称他们[有 2500 万的月活](https://techcrunch.com/2018/08/01/duolingo-hires-its-first-chief-marketing-officer-as-active-user-numbers-stagnate/)。而关于成效如何的报道却各执一词。一些认真的用户[对他们在多邻国上取得的成果非常满意](https://www.thrillist.com/travel/nation/duolingo-app-review-foreign-language), 但[其他人认为效果有限](https://www.thecut.com/2019/01/does-duolingo-even-work.html) 。当然，多邻国自己肯定[吹捧说研究表明该系统十分成功](https://support.duolingo.com/hc/en-us/articles/115000035183-Are-there-official-studies-about-Duolingo-) 。在我们看来，多邻国和其他类似的系统应该可以在一个正式的语言学习计划中起到一定程度（也只能是一定程度）的作用。
+SRM 系统在语言学习中的应用最为广泛。比如多邻国宣称他们[有 2500 万的月活](https://techcrunch.com/2018/08/01/duolingo-hires-its-first-chief-marketing-officer-as-active-user-numbers-stagnate/)。而关于成效如何的报道却各执一词。一些认真的用户[对他们在多邻国上取得的成果非常满意](https://www.thrillist.com/travel/nation/duolingo-app-review-foreign-language), 但[其他人认为效果有限](https://www.thecut.com/2019/01/does-duolingo-even-work.html)。当然，多邻国自己肯定[吹捧说研究表明该系统十分成功](https://support.duolingo.com/hc/en-us/articles/115000035183-Are-there-official-studies-about-Duolingo-)。在我们看来，多邻国和其他类似的系统应该可以在一个正式的语言学习计划中起到一定程度（也只能是一定程度）的作用。
 
 What about memory systems for uses beyond language? Quizlet is popular, with [50 million monthly active users](https://techcrunch.com/2018/10/25/quizlet-hits-50m-monthly-users/). It’s widely used in classrooms, especially for simple declarative knowledge – lists of American Presidents, capitals of countries, and so on. Anki and SuperMemo seem to most often be used for similar simple declarative knowledge, but have much smaller active user bases than QuizletThey are, however, widely used within some interesting niche audiences. For instance, there is a [thriving population](https://www.reddit.com/r/medicalschoolanki/) of medical students using Anki.[^12]
 
-除了语言学习之外的那些记忆系统怎么样呢? Quizlet 是一个有着 [5000万月活](https://techcrunch.com/2018/10/25/quizlet-hits-50m-monthly-users/) 的流行软件。它在课堂上得到了广泛使用，特别是用来记忆简单的陈述性知识——美国总统名单，国家首都等等。Anki 和 SuperMemo 似乎也常用于记忆简单的陈述性知识，但它们的活跃用户群要比 Quizlet 小得多。[^12]
+除了语言学习之外的那些记忆系统怎么样呢？Quizlet 是一个有着 [5000 万月活](https://techcrunch.com/2018/10/25/quizlet-hits-50m-monthly-users/) 的流行软件。它在课堂上得到了广泛使用，特别是用来记忆简单的陈述性知识——美国总统名单，国家首都等等。Anki 和 SuperMemo 似乎也常用于记忆简单的陈述性知识，但它们的活跃用户群要比 Quizlet 小得多。[^12]
 
 One of the ideas motivating *Quantum Country* is that memory systems aren’t just useful for simple declarative knowledge, such as vocabulary words and lists of capitals. In fact, memory systems can be extraordinarily helpful for mastering abstract, conceptual knowledge, the kind of knowledge required to learn subjects such as quantum mechanics and quantum computing. This is achieved in part through many detailed strategies for constructing cards capable of encoding this kind of understanding. But, more importantly, it’s possible because of the way the mnemonic medium embeds spaced repetition inside a narrative. That narrative embedding makes it possible for context and understanding to build in ways difficult in other memory systems.
 
@@ -226,7 +226,7 @@ One of the ideas motivating *Quantum Country* is that memory systems aren’t ju
 
 Other people have also developed ways of using memory systems for abstract, conceptual knowledge. Perhaps most prominently, the creator of the SuperMemo system, Piotr Wozniak, has [written extensively](http://supermemopedia.com/wiki/Main_Page) about the many ingenious ways he uses memory systems[^13]. And several other expert users of memory systems have also developed similar strategies. However, employing those strategies requires considerable skill. In practice, that skill barrier has meant these strategies are used by no more than a tiny handful of people.
 
-其他人也研究出了把记忆系统用于抽象的概念性知识的方法。最突出的是或许当属 SuperMemo 的创造者 Piotr Wozniak。他[写了很多文章](http://supermemopedia.com/wiki/Main_Page) 来介绍了他使用记忆系统的巧妙方法[^13]. 其他一些记忆系统的专家级用户也发明了类似的策略。然而，应用这些策略需要相当的技巧。在实践中，这种技巧上的障碍意味着这些策略只能是少数人的专属。
+其他人也研究出了把记忆系统用于抽象的概念性知识的方法。最突出的是或许当属 SuperMemo 的创造者 Piotr Wozniak。他[写了很多文章](http://supermemopedia.com/wiki/Main_Page)来介绍了他使用记忆系统的巧妙方法[^13]。其他一些记忆系统的专家级用户也发明了类似的策略。然而，应用这些策略需要相当的技巧。在实践中，这种技巧上的障碍意味着这些策略只能是少数人的专属。
 
 By contrast, in *Quantum Country* an expert writes the cards, an expert who is skilled not only in the subject matter of the essay, but also in strategies which can be used to encode abstract, conceptual knowledge. And so *Quantum Country* provides a much more scalable approach to using memory systems to do abstract, conceptual learning. In some sense, *Quantum Country* aims to expand the range of subjects users can comprehend at all. In that, it has very different aspirations to all prior memory systems.
 
@@ -242,9 +242,9 @@ More generally, we believe memory systems are a far richer space than has previo
 - Might it be that one day most human beings will have a regular *memory practice*, as part of their everyday lives? Can we make it so memory becomes a choice; is it possible to in some sense solve the problem of memory?
 
 - 除了像过去那样用来记忆简单的，陈述性的知识，记忆系统还可以有哪些新的应用方式？
-- 通过记忆系统形成的理解能有多深? 哪些方法能帮助用户尽可能地加深理解?
-- 我们能在多大程度上提高人类的记忆能力? 达成的难度有多大? 又有什么好处和坏处？
-- 是否有一天，大多数人都会把定期的**记忆练习**作为他们日常生活中的一部分? 我们能不能让记忆成为一种选择? 我们有没有可能在某种意义上彻底解决记忆的问题？
+- 通过记忆系统形成的理解能有多深？哪些方法能帮助用户尽可能地加深理解？
+- 我们能在多大程度上提高人类的记忆能力？达成的难度有多大？又有什么好处和坏处？
+- 是否有一天，大多数人都会把定期的**记忆练习**作为他们日常生活中的一部分？我们能不能让记忆成为一种选择？我们有没有可能在某种意义上彻底解决记忆的问题？
 
 Over the next few sections we sketch out some of our thinking about how memory systems may be developed. We’ll see that memory systems are a small part of a much bigger picture. Not only is seriously developing memory systems likely to lead to one or more transformative tools for thought, we also believe it will teach us much about the general problem of developing such tools.
 
@@ -1067,9 +1067,11 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 [^Mass Point 1]: 这一句语序有点怪，但我想不出更好的
 
+[^Shom 1]: emergent 在此处应当指 emergence, 即简单的部分相加，整体表现出部分所没有的性质，如蚁群表现出单独蚂蚁所没有的智慧
+
 [^4]: An account may be found in Iverson’s Turing Award lecture, [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). Incidentally, even Iverson is really describing a medium for thought, the APL programming language, not a narrow tool. 可以从Iverson在Turing奖获奖演讲 [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). 顺便说一下，Iverson这里描述的实际上是一种思考媒介APL语言，而不是狭义的工具。
 
-[^Mass Point 2 ]: 这一段后面部分翻得不是很好，甚至可能有理解错误，原文如下To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
+[^Mass Point 2]: 这一段后面部分翻得不是很好，甚至可能有理解错误，原文如下 To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
 
 [^Mass Point 3]: 这里把idea翻译为想法有点不太合中文的表达习惯，因为这里的idea明显指的是一些具象化的概念与公式，但中文里"想法"一词多指一些形而上的东西。请校对时再斟酌一下
 
